--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &#8212; NGLView 1.0.a0+12.g06a6aaa documentation</title>
+    <title>Index &#8212; NGLView 1.0.a0+17.g211186c.dirty documentation</title>
     
     <link rel="stylesheet" href="_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '1.0.a0+12.g06a6aaa',
+        VERSION:     '1.0.a0+17.g211186c.dirty',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -41,7 +41,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">NGLView 1.0.a0+12.g06a6aaa documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">NGLView 1.0.a0+17.g211186c.dirty documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -323,6 +323,8 @@
 </li>
         <li><a href="api.html#nglview.HTMDTrajectory.get_structure_string">(nglview.HTMDTrajectory method)</a>
 </li>
+        <li><a href="api.html#nglview.IOTBXStructure.get_structure_string">(nglview.IOTBXStructure method)</a>
+</li>
         <li><a href="api.html#nglview.MDAnalysisTrajectory.get_structure_string">(nglview.MDAnalysisTrajectory method)</a>
 </li>
         <li><a href="api.html#nglview.MDTrajTrajectory.get_structure_string">(nglview.MDTrajTrajectory method)</a>
@@ -334,6 +336,8 @@
         <li><a href="api.html#nglview.PyTrajTrajectory.get_structure_string">(nglview.PyTrajTrajectory method)</a>
 </li>
         <li><a href="api.html#nglview.RdkitStructure.get_structure_string">(nglview.RdkitStructure method)</a>
+</li>
+        <li><a href="api.html#nglview.RosettaStructure.get_structure_string">(nglview.RosettaStructure method)</a>
 </li>
         <li><a href="api.html#nglview.SimpletrajTrajectory.get_structure_string">(nglview.SimpletrajTrajectory method)</a>
 </li>
@@ -347,6 +351,8 @@
 </li>
         <li><a href="_api/nglview.adaptor.html#nglview.adaptor.HTMDTrajectory.get_structure_string">(nglview.adaptor.HTMDTrajectory method)</a>
 </li>
+        <li><a href="_api/nglview.adaptor.html#nglview.adaptor.IOTBXStructure.get_structure_string">(nglview.adaptor.IOTBXStructure method)</a>
+</li>
         <li><a href="_api/nglview.adaptor.html#nglview.adaptor.MDAnalysisTrajectory.get_structure_string">(nglview.adaptor.MDAnalysisTrajectory method)</a>
 </li>
         <li><a href="_api/nglview.adaptor.html#nglview.adaptor.MDTrajTrajectory.get_structure_string">(nglview.adaptor.MDTrajTrajectory method)</a>
@@ -358,6 +364,8 @@
         <li><a href="_api/nglview.adaptor.html#nglview.adaptor.PyTrajTrajectory.get_structure_string">(nglview.adaptor.PyTrajTrajectory method)</a>
 </li>
         <li><a href="_api/nglview.adaptor.html#nglview.adaptor.RdkitStructure.get_structure_string">(nglview.adaptor.RdkitStructure method)</a>
+</li>
+        <li><a href="_api/nglview.adaptor.html#nglview.adaptor.RosettaStructure.get_structure_string">(nglview.adaptor.RosettaStructure method)</a>
 </li>
         <li><a href="_api/nglview.adaptor.html#nglview.adaptor.SimpletrajTrajectory.get_structure_string">(nglview.adaptor.SimpletrajTrajectory method)</a>
 </li>
@@ -404,12 +412,18 @@
 </li>
       <li><a href="_api/nglview.scripts.html#nglview.scripts.nglview.install_nbextension">install_nbextension() (in module nglview.scripts.nglview)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_api/nglview.player.html#nglview.player.TrajectoryPlayer.interpolate">interpolate (nglview.player.TrajectoryPlayer attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_api/nglview.contrib.movie.html#nglview.contrib.movie.MovieMaker.interupt">interupt() (nglview.contrib.movie.MovieMaker method)</a>
 </li>
+      <li><a href="api.html#nglview.IOTBXStructure">IOTBXStructure (class in nglview)</a>
+
+      <ul>
+        <li><a href="_api/nglview.adaptor.html#nglview.adaptor.IOTBXStructure">(class in nglview.adaptor)</a>
+</li>
+      </ul></li>
       <li><a href="_api/nglview.player.html#nglview.player.TrajectoryPlayer.iparams">iparams (nglview.player.TrajectoryPlayer attribute)</a>
 </li>
   </ul></td>
@@ -650,14 +664,14 @@
         <li><a href="_api/nglview.widget.html#nglview.widget.NGLWidget.remove_component">(nglview.widget.NGLWidget method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#nglview.NGLWidget.render_image">render_image() (nglview.NGLWidget method)</a>, <a href="api.html#nglview.NGLWidget.render_image">[1]</a>
 
       <ul>
         <li><a href="_api/nglview.widget.html#nglview.widget.NGLWidget.render_image">(nglview.widget.NGLWidget method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#nglview.NGLWidget.representations">representations (nglview.NGLWidget attribute)</a>, <a href="api.html#nglview.NGLWidget.representations">[1]</a>
 
       <ul>
@@ -666,6 +680,12 @@
       </ul></li>
       <li><a href="_api/nglview.theme.html#nglview.theme.theme.reset">reset() (in module nglview.theme.theme)</a>
 </li>
+      <li><a href="api.html#nglview.RosettaStructure">RosettaStructure (class in nglview)</a>
+
+      <ul>
+        <li><a href="_api/nglview.adaptor.html#nglview.adaptor.RosettaStructure">(class in nglview.adaptor)</a>
+</li>
+      </ul></li>
       <li><a href="_api/nglview.jsutils.html#nglview.utils.js_utils.run">run() (in module nglview.utils.js_utils)</a>
 </li>
   </ul></td>
@@ -700,6 +720,8 @@
 </li>
       <li><a href="api.html#nglview.show_htmd">show_htmd() (in module nglview)</a>
 </li>
+      <li><a href="api.html#nglview.show_iotbx">show_iotbx() (in module nglview)</a>
+</li>
       <li><a href="api.html#nglview.show_mdanalysis">show_mdanalysis() (in module nglview)</a>
 </li>
       <li><a href="api.html#nglview.show_mdtraj">show_mdtraj() (in module nglview)</a>
@@ -720,7 +742,9 @@
 </li>
       <li><a href="api.html#nglview.show_rdkit">show_rdkit() (in module nglview)</a>
 </li>
-      <li><a href="api.html#nglview.show_schrodinger_structure">show_schrodinger_structure() (in module nglview)</a>
+      <li><a href="api.html#nglview.show_rosetta">show_rosetta() (in module nglview)</a>
+</li>
+      <li><a href="api.html#nglview.show_schrodinger">show_schrodinger() (in module nglview)</a>
 </li>
       <li><a href="api.html#nglview.show_simpletraj">show_simpletraj() (in module nglview)</a>
 </li>
@@ -874,12 +898,12 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">NGLView 1.0.a0+12.g06a6aaa documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">NGLView 1.0.a0+17.g211186c.dirty documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016, Alexander Rose, Hai Nguyen.
-      Last updated on Jul 23, 2017.
+      Last updated on Jul 28, 2017.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.5.1.
     </div>
   </body>
