--- a/dev/_modules/nglview/utils/js_utils.html
+++ b/dev/_modules/nglview/utils/js_utils.html
@@ -4,30 +4,21 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>nglview.utils.js_utils &#8212; NGLView 1.0 documentation</title>
+    <title>nglview.utils.js_utils &#8212; NGLView 2.1.0+10.g91d1b0e documentation</title>
     <link rel="stylesheet" href="../../../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../../../_static/pygments.css" type="text/css" />
-    <link rel="stylesheet" href="https://unpkg.com/font-awesome@4.5.0/css/font-awesome.min.css" type="text/css" />
-    <script type="text/javascript">
-      var DOCUMENTATION_OPTIONS = {
-        URL_ROOT:    '../../../',
-        VERSION:     '1.0',
-        COLLAPSE_INDEX: false,
-        FILE_SUFFIX: '.html',
-        HAS_SOURCE:  true,
-        SOURCELINK_SUFFIX: '.txt'
-      };
-    </script>
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/font-awesome@4.5.0/css/font-awesome.min.css" />
+    <script type="text/javascript" id="documentation_options" data-url_root="../../../" src="../../../_static/documentation_options.js"></script>
     <script type="text/javascript" src="../../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../../_static/doctools.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/@jupyter-widgets/html-manager@^0.10.0/dist/embed.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="../../../_static/language_data.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/@jupyter-widgets/html-manager@^0.14.0/dist/embed.js"></script>
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" /> 
-  </head>
-  <body>
+  </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
       <ul>
@@ -37,7 +28,7 @@
         <li class="right" >
           <a href="../../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../../index.html">NGLView 1.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../../index.html">NGLView 2.1.0+10.g91d1b0e documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../../index.html" accesskey="U">Module code</a> &#187;</li> 
       </ul>
     </div>  
@@ -54,8 +45,6 @@
 <span class="n">__alll__</span> <span class="o">=</span> <span class="p">[</span>
     <span class="s1">&#39;clean_error_output&#39;</span><span class="p">,</span> <span class="s1">&#39;launch_qtconsole&#39;</span><span class="p">,</span> <span class="s1">&#39;clean_empty_output_area&#39;</span><span class="p">,</span>
     <span class="s1">&#39;open_url_template&#39;</span><span class="p">,</span> <span class="s1">&#39;_set_ipython_cell&#39;</span><span class="p">,</span> <span class="s1">&#39;ngl_demo&#39;</span><span class="p">,</span> <span class="s1">&#39;init_funcs&#39;</span><span class="p">,</span>
-    <span class="s1">&#39;_move_notebook_to_the_right&#39;</span><span class="p">,</span> <span class="s1">&#39;_move_notebook_to_the_left&#39;</span><span class="p">,</span>
-    <span class="s1">&#39;_reset_notebook&#39;</span><span class="p">,</span> <span class="s1">&#39;_set_notebook_draggable&#39;</span>
 <span class="p">]</span>
 
 
@@ -75,7 +64,7 @@
 
 
 <div class="viewcode-block" id="execute"><a class="viewcode-back" href="../../../_api/nglview.jsutils.html#nglview.utils.js_utils.execute">[docs]</a><span class="k">def</span> <span class="nf">execute</span><span class="p">(</span><span class="n">command</span><span class="p">):</span>
-    <span class="n">run</span><span class="p">(</span><span class="s1">&#39;Jupyter.notebook.kernel.execute(&quot;</span><span class="si">{}</span><span class="s1">&quot;)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">command</span><span class="p">))</span></div>
+    <span class="n">run</span><span class="p">(</span><span class="n">f</span><span class="s1">&#39;Jupyter.notebook.kernel.execute(&quot;</span><span class="si">{command}</span><span class="s1">&quot;)&#39;</span><span class="p">)</span></div>
 
 
 <span class="k">def</span> <span class="nf">_set_notebook_width</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="s1">&#39;20%&#39;</span><span class="p">,</span> <span class="n">left_padding</span><span class="o">=</span><span class="mi">0</span><span class="p">):</span>
@@ -87,49 +76,11 @@
 <span class="s2">    &quot;&quot;&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="n">width</span><span class="p">)</span>
 
     <span class="k">if</span> <span class="n">left_padding</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
-        <span class="n">offset_str</span> <span class="o">=</span> <span class="s2">&quot;cb.offset({{&#39;left&#39;: </span><span class="si">{}</span><span class="s2">}})&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">left_padding</span><span class="p">)</span>
+        <span class="n">offset_str</span> <span class="o">=</span> <span class="n">f</span><span class="s2">&quot;cb.offset({{&#39;left&#39;: </span><span class="si">{left_padding}</span><span class="s2">}})&quot;</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="n">offset_str</span> <span class="o">=</span> <span class="s1">&#39;&#39;</span>
     <span class="n">command</span> <span class="o">=</span> <span class="n">script_template</span> <span class="o">+</span> <span class="n">offset_str</span>
     <span class="n">run</span><span class="p">(</span><span class="n">command</span><span class="p">)</span>
-
-
-<span class="k">def</span> <span class="nf">_set_notebook_draggable</span><span class="p">(</span><span class="n">yes</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
-    <span class="n">script_template</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot;</span>
-<span class="s2">    var x = $(&#39;#notebook-container&#39;);</span>
-<span class="s2">    x.draggable(</span><span class="si">{args}</span><span class="s2">);</span>
-<span class="s2">    &quot;&quot;&quot;</span>
-    <span class="k">if</span> <span class="n">yes</span><span class="p">:</span>
-        <span class="n">run</span><span class="p">(</span><span class="n">script_template</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;</span><span class="si">{args}</span><span class="s1">&#39;</span><span class="p">,</span> <span class="s1">&#39;&#39;</span><span class="p">))</span>
-    <span class="k">else</span><span class="p">:</span>
-        <span class="n">run</span><span class="p">(</span><span class="n">script_template</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;</span><span class="si">{args}</span><span class="s1">&#39;</span><span class="p">,</span> <span class="s1">&#39;&quot;destroy&quot;&#39;</span><span class="p">))</span>
-
-
-<span class="k">def</span> <span class="nf">_move_notebook_to_the_right</span><span class="p">():</span>
-    <span class="n">script_template</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot;</span>
-<span class="s2">    var x = $(&#39;#notebook-container&#39;);</span>
-<span class="s2">    x.css({position: &quot;relative&quot;, left: &quot;20%&quot;});</span>
-<span class="s2">    &quot;&quot;&quot;</span>
-    <span class="n">run</span><span class="p">(</span><span class="n">script_template</span><span class="p">)</span>
-
-
-<span class="k">def</span> <span class="nf">_move_notebook_to_the_left</span><span class="p">():</span>
-    <span class="n">script_template</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot;</span>
-<span class="s2">    var cb = Jupyter.notebook.container;</span>
-
-<span class="s2">    cb.offset({&#39;left&#39;: 0})</span>
-<span class="s2">    &quot;&quot;&quot;</span>
-    <span class="n">run</span><span class="p">(</span><span class="n">script_template</span><span class="p">)</span>
-
-
-<span class="k">def</span> <span class="nf">_reset_notebook</span><span class="p">():</span>
-    <span class="n">script_template</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot;</span>
-<span class="s2">    var x = $(&#39;#notebook-container&#39;);</span>
-<span class="s2">    x.width(&#39;30%&#39;);</span>
-<span class="s2">    x.css({position: &quot;relative&quot;, left: &quot;0%&quot;});</span>
-<span class="s2">    &quot;&quot;&quot;</span>
-    <span class="n">run</span><span class="p">(</span><span class="n">script_template</span><span class="p">)</span>
-
 
 <span class="n">clean_empty_output_area</span> <span class="o">=</span> <span class="n">partial</span><span class="p">(</span>
     <span class="n">run</span><span class="p">,</span>
@@ -250,12 +201,14 @@
         <div class="sphinxsidebarwrapper">
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
+    <div class="searchformwrapper">
     <form class="search" action="../../../search.html" method="get">
-      <div><input type="text" name="q" /></div>
-      <div><input type="submit" value="Go" /></div>
+      <input type="text" name="q" />
+      <input type="submit" value="Go" />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
+    </div>
 </div>
 <script type="text/javascript">$('#searchbox').show(0);</script>
         </div>
@@ -271,14 +224,14 @@
         <li class="right" >
           <a href="../../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../../index.html">NGLView 1.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../../index.html">NGLView 2.1.0+10.g91d1b0e documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../../index.html" >Module code</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016, Alexander Rose, Hai Nguyen.
-      Last updated on Oct 31, 2017.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.6.3.
+      Last updated on May 31, 2019.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.4.
     </div>
   </body>
 </html>
