--- a/latest/index.html
+++ b/latest/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>nglview</title>
-      <meta http-equiv = "refresh" content = "2; url = release/v2.7.7/index.html" />
+      <meta http-equiv = "refresh" content = "2; url = ../release/v2.7.7/index.html" />
    </head>
    <body>
       <p>nglview</p>
