--- a/release/index.html
+++ b/release/index.html
@@ -1,3 +1,5 @@
+<a href='v2.7.7/index.html'> 2.7.7  </a>
+<br>
 <a href='v2.1.0/index.html'> 2.1.0  </a>
 <br>
 <a href='v1.0/index.html'> 1.0  </a>
