--- a/release/v2.7.7/_modules/nglview/component.html
+++ b/release/v2.7.7/_modules/nglview/component.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nglview.component &#8212; NGLView 2.7.7+1.gf915b3e.dirty documentation</title>
+    <title>nglview.component &#8212; NGLView 2.7.7+0.gd41dfb9.dirty documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/nature.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="../../_static/jupyter-sphinx.css" />
@@ -29,7 +29,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 2.7.7+1.gf915b3e.dirty documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 2.7.7+0.gd41dfb9.dirty documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" accesskey="U">Module code</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">nglview.component</a></li> 
       </ul>
@@ -127,7 +127,7 @@
 <span class="sd">        ----------</span>
 <span class="sd">        rot: List-like of float, length = 3</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_call</span><span class="p">(</span><span class="s1">&#39;setPosition&#39;</span><span class="p">,</span> <span class="n">rot</span><span class="p">)</span></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_call</span><span class="p">(</span><span class="s1">&#39;setRotation&#39;</span><span class="p">,</span> <span class="n">rot</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="ComponentViewer.set_scale"><a class="viewcode-back" href="../../_api/nglview.widget.html#nglview.widget.ComponentViewer.set_scale">[docs]</a>    <span class="k">def</span> <span class="nf">set_scale</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">scale</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
@@ -205,7 +205,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 2.7.7+1.gf915b3e.dirty documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 2.7.7+0.gd41dfb9.dirty documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" >Module code</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">nglview.component</a></li> 
       </ul>
