--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; NGLView 2.7.7+12.g5136ac2.dirty documentation</title>
+    <title>Index &#8212; NGLView 2.7.7+13.gd28e3c5 documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/nature.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="_static/jupyter-sphinx.css" />
@@ -29,7 +29,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">NGLView 2.7.7+12.g5136ac2.dirty documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">NGLView 2.7.7+13.gd28e3c5 documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">Index</a></li> 
       </ul>
     </div>  
@@ -1104,7 +1104,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">NGLView 2.7.7+12.g5136ac2.dirty documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">NGLView 2.7.7+13.gd28e3c5 documentation</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">Index</a></li> 
       </ul>
     </div>
